# console

./: .gitignore  Cargo.toml  README.md  ui_layout.xml
src/: lib.rs  main.rs  plugin.rs  storage.rs  telemetry.rs
src/plugins/: speedometer.rs
src/ui/: mod.rs  widgets.rs
tests/: lib_test.rs
